--- a/Documentation/Documentation.ipynb
+++ b/Documentation/Documentation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,38 @@
     "import re\n",
     "from os import stat\n",
     "import xarray as xr\n",
-    "import cfgrib\n",
     "from os.path import exists\n",
     "from netCDF4 import Dataset\n",
-    "import random"
+    "import random\n",
+    "from bs4 import BeautifulSoup\n",
+    "import cdsapi\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "import pickle\n",
+    "\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "\n",
+    "#For machine learning part\n",
+    "import time\n",
+    "import xgboost as xgb\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.base import TransformerMixin\n",
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data from USA is collected through data accessible on the USDA website. The data is pricessed using regex to get the station name, elevation, and coordinates and the stations' snow depth and SWE measurements alongside the date of measurement. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,292 +85,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "state\n",
-      "(267, 12) 267\n",
-      "[160]\n",
       "AK 0\n",
-      "AK 1\n",
-      "AK 2\n",
-      "AK 3\n",
-      "AK 4\n",
-      "AK 5\n",
-      "AK 6\n",
-      "AK 7\n",
-      "AK 8\n",
-      "AK 9\n",
       "AK 10\n",
-      "AK 11\n",
-      "AK 12\n",
-      "AK 13\n",
-      "AK 14\n",
-      "AK 15\n",
-      "AK 16\n",
-      "AK 17\n",
-      "AK 18\n",
-      "AK 19\n",
       "AK 20\n",
-      "AK 21\n",
-      "AK 22\n",
-      "AK 23\n",
-      "AK 24\n",
-      "AK 25\n",
-      "AK 26\n",
-      "AK 27\n",
-      "AK 28\n",
-      "AK 29\n",
       "AK 30\n",
-      "AK 31\n",
-      "AK 32\n",
-      "AK 33\n",
-      "AK 34\n",
-      "AK 35\n",
-      "AK 36\n",
-      "AK 37\n",
-      "AK 38\n",
-      "AK 39\n",
       "AK 40\n",
-      "AK 41\n",
-      "AK 42\n",
-      "AK 43\n",
-      "AK 44\n",
-      "AK 45\n",
-      "AK 46\n",
-      "AK 47\n",
-      "AK 48\n",
-      "AK 49\n",
       "AK 50\n",
-      "AK 51\n",
-      "AK 52\n",
-      "AK 53\n",
-      "AK 54\n",
-      "AK 55\n",
-      "AK 56\n",
-      "AK 57\n",
       "57 Didnt work, nan\n",
-      "AK 58\n",
-      "AK 59\n",
       "AK 60\n",
-      "AK 61\n",
-      "AK 62\n",
-      "AK 63\n",
-      "AK 64\n",
-      "AK 65\n",
-      "AK 66\n",
-      "AK 67\n",
-      "AK 68\n",
-      "AK 69\n",
       "69 Didnt work, nan\n",
       "AK 70\n",
-      "AK 71\n",
-      "AK 72\n",
-      "AK 73\n",
-      "AK 74\n",
-      "AK 75\n",
-      "AK 76\n",
-      "AK 77\n",
-      "AK 78\n",
-      "AK 79\n",
       "AK 80\n",
-      "AK 81\n",
-      "AK 82\n",
-      "AK 83\n",
-      "AK 84\n",
-      "AK 85\n",
-      "AK 86\n",
-      "AK 87\n",
       "87 Didnt work, nan\n",
-      "AK 88\n",
       "88 Didnt work, nan\n",
-      "AK 89\n",
       "AK 90\n",
-      "AK 91\n",
-      "AK 92\n",
-      "AK 93\n",
-      "AK 94\n",
-      "AK 95\n",
-      "AK 96\n",
-      "AK 97\n",
       "97 Didnt work, nan\n",
-      "AK 98\n",
-      "AK 99\n",
       "99 Didnt work, 34J07S\n",
       "AK 100\n",
-      "AK 101\n",
-      "AK 102\n",
-      "AK 103\n",
-      "AK 104\n",
-      "AK 105\n",
-      "AK 106\n",
-      "AK 107\n",
-      "AK 108\n",
-      "AK 109\n",
       "AK 110\n",
-      "AK 111\n",
-      "AK 112\n",
-      "AK 113\n",
-      "AK 114\n",
-      "AK 115\n",
-      "AK 116\n",
-      "AK 117\n",
-      "AK 118\n",
-      "AK 119\n",
       "AK 120\n",
-      "AK 121\n",
-      "AK 122\n",
-      "AK 123\n",
-      "AK 124\n",
-      "AK 125\n",
-      "AK 126\n",
-      "AK 127\n",
-      "AK 128\n",
-      "AK 129\n",
       "AK 130\n",
-      "AK 131\n",
-      "AK 132\n",
-      "AK 133\n",
-      "AK 134\n",
-      "AK 135\n",
-      "AK 136\n",
-      "AK 137\n",
-      "AK 138\n",
-      "AK 139\n",
       "AK 140\n",
-      "AK 141\n",
-      "AK 142\n",
       "142 Didnt work, 55K08S\n",
-      "AK 143\n",
-      "AK 144\n",
-      "AK 145\n",
-      "AK 146\n",
-      "AK 147\n",
-      "AK 148\n",
       "148 Didnt work, 54K01S\n",
-      "AK 149\n",
       "AK 150\n",
-      "AK 151\n",
-      "AK 152\n",
-      "AK 153\n",
-      "AK 154\n",
-      "AK 155\n",
-      "AK 156\n",
-      "AK 157\n",
-      "AK 158\n",
-      "AK 159\n",
       "AK 160\n",
-      "AK 161\n",
-      "AK 162\n",
-      "AK 163\n",
-      "AK 164\n",
-      "AK 165\n",
-      "AK 166\n",
-      "AK 167\n",
-      "AK 168\n",
-      "AK 169\n",
       "AK 170\n",
-      "AK 171\n",
-      "AK 172\n",
-      "AK 173\n",
-      "AK 174\n",
-      "AK 175\n",
-      "AK 176\n",
-      "AK 177\n",
-      "AK 178\n",
-      "AK 179\n",
       "AK 180\n",
-      "AK 181\n",
-      "AK 182\n",
-      "AK 183\n",
-      "AK 184\n",
-      "AK 185\n",
-      "AK 186\n",
-      "AK 187\n",
-      "AK 188\n",
-      "AK 189\n",
       "AK 190\n",
-      "AK 191\n",
-      "AK 192\n",
-      "AK 193\n",
-      "AK 194\n",
-      "AK 195\n",
-      "AK 196\n",
-      "AK 197\n",
-      "AK 198\n",
-      "AK 199\n",
       "AK 200\n",
-      "AK 201\n",
-      "AK 202\n",
-      "AK 203\n",
-      "AK 204\n",
-      "AK 205\n",
-      "AK 206\n",
-      "AK 207\n",
-      "AK 208\n",
-      "AK 209\n",
       "AK 210\n",
-      "AK 211\n",
-      "AK 212\n",
-      "AK 213\n",
-      "AK 214\n",
-      "AK 215\n",
-      "AK 216\n",
       "216 Didnt work, nan\n",
-      "AK 217\n",
-      "AK 218\n",
-      "AK 219\n",
       "AK 220\n",
-      "AK 221\n",
-      "AK 222\n",
-      "AK 223\n",
-      "AK 224\n",
-      "AK 225\n",
-      "AK 226\n",
-      "AK 227\n",
-      "AK 228\n",
-      "AK 229\n",
       "AK 230\n",
-      "AK 231\n",
-      "AK 232\n",
-      "AK 233\n",
-      "AK 234\n",
-      "AK 235\n",
-      "AK 236\n",
-      "AK 237\n",
-      "AK 238\n",
-      "AK 239\n",
       "AK 240\n",
-      "AK 241\n",
-      "AK 242\n",
-      "AK 243\n",
-      "AK 244\n",
-      "AK 245\n",
-      "AK 246\n",
-      "AK 247\n",
-      "AK 248\n",
-      "AK 249\n",
       "AK 250\n",
-      "AK 251\n",
-      "AK 252\n",
-      "AK 253\n",
-      "AK 254\n",
-      "AK 255\n",
-      "AK 256\n",
-      "AK 257\n",
-      "AK 258\n",
-      "AK 259\n",
-      "AK 260\n",
-      "AK 261\n",
-      "AK 262\n",
-      "AK 263\n",
-      "AK 264\n",
-      "AK 265\n",
-      "AK 266\n"
+      "AK 260\n"
      ]
     }
    ],
@@ -437,7 +217,7 @@
     "\n",
     "        t = get(urls[0])\n",
     "\n",
-    "        from bs4 import BeautifulSoup\n",
+    "        \n",
     "\n",
     "        soup = BeautifulSoup(r.text, \"html.parser\")\n",
     "        soup_table = soup.find_all(\"table\")\n",
@@ -850,7 +630,7 @@
    "outputs": [],
    "source": [
     "def order_era5():\n",
-    "    import cdsapi\n",
+    "    \n",
     "\n",
     "    \"\"\"\n",
     "    Retreiving ERA5 data requires a key and precise parameters. This is only meant to serve \n",
@@ -1522,8 +1302,6 @@
     "Code developed by ntokas et al., edited by me. Fore more information see https://hess.copernicus.org/articles/25/3017/2021/\n",
     "\"\"\"\n",
     "\n",
-    "import pickle\n",
-    "\n",
     "\n",
     "def get_met_data(Lat, Long, Station, year, par_dir):\n",
     "    # get lat and long of each Nivo Station rounded on one digit\n",
@@ -1689,19 +1467,14 @@
     "    # load Canadian historical sonw survey (CHSS): dictionary with Station ID, longitude, latitude, elevation,\n",
     "    #                                              2 dim matrix (Station ID x dates) for SWE, SD, density\n",
     "    \n",
-    "    import datetime\n",
-    "    import pandas as pd\n",
+    "    \n",
     "\n",
     "    # Load associated meteorological data\n",
     "    total_precip = pd.read_csv(\"USA_data_tp.csv\", index_col=False)\n",
     "    total_precip = total_precip * 1000\n",
     "\n",
     "\n",
-    "    print(\"Snow survey data and meteorological data loaded\")\n",
-    "\n",
-    "    import numpy as np\n",
-    "    import pickle\n",
-    "\n",
+    "    print(\"Snow survey data and meteorological data loaded\")  \n",
     "\n",
     "    # correction of temperature because of different elevation of station and grid\n",
     "    # load elevation of grid points\n",
@@ -1718,9 +1491,7 @@
     "\n",
     "\n",
     "    # load function to calculate input varibles from meteorological data\n",
-    "    import _input_calc\n",
-    "    import pandas as pd\n",
-    "    from datetime import datetime, timedelta\n",
+    "    \n",
     "\n",
     "    # create dataset for input;\n",
     "    # one line represents one records of SD and the associated input varibles, which will be calculated in the following\n",
@@ -2004,15 +1775,7 @@
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import time\n",
-    "import xgboost as xgb\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.base import TransformerMixin\n",
-    "from sklearn.metrics import r2_score"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2148,7 +1911,7 @@
     }
    ],
    "source": [
-    "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "#Dont use this, only here for clean prints\n",
     "\n",
@@ -2184,7 +1947,7 @@
     "        lst[i-1].append(results[-1])\n",
     "    lst.append([])\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "for x in lst:\n",
     "    plt.plot(x)\n",
